# badRPG

./: .gitignore  CMakeLists.txt  README.md  startGame  testInventory  testMovement  test_exec
.github/workflows/: main.yml
lib/: BasicBoss.h  Battle.h  Boss.h  EliteBoss1.h  EliteBoss2.h  Enemy.h  FinalBoss.h  Game.h  Inventory.h  Item.h  LoadManager.h  Map.h  Player.h  Potion.h  Screen.h  Stats.h  Weapon.h  header.hpp
lib/Player/: Archer.h  Player.h  Stats.h
lib/screens/: Screen.hpp
lib/tiles/: EmptyTile.h  FightTile.h  ItemTile.h  PotionTile.h  SpawnTile.h  Tile.h  WeaponTile.h
src/: BasicBoss.cpp  Battle.cpp  Boss.cpp  EliteBoss1.cpp  EliteBoss2.cpp  Enemy.cpp  FinalBoss.cpp  Game.cpp  Inventory.cpp  LoadManager.cpp  Map.cpp  Player.cpp  Potion.cpp  Screen.cpp  Stats.cpp  Weapon.cpp  main.cpp
src/Player/: Player.cpp  Stats.cpp
src/screens/: Screen.cpp
src/tiles/: EmptyTile.cpp  FightTile.cpp  ItemTile.cpp  PotionTile.cpp  SpawnTile.cpp  Tile.cpp  WeaponTile.cpp
test/: test.cpp  testBasicBoss.cpp  testBattle.cpp  testEliteBoss1.cpp  testEliteBoss2.cpp  testFinalBoss.cpp  testInventory.cpp  testItem.cpp  testItems.cpp  testMovement.cpp  testPlayer.cpp  testScreens.cpp  testStats.cpp  testTiles.cpp  testWeapons.cpp
